# suprnova

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  dev.sh
app/: .env  Cargo.toml  database.db
app/cmd/: main.rs
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: main.ts
app/src/: bootstrap.rs  features.rs  lib.rs  routes.rs
app/src/actions/: example_action.rs  todo_action.rs
app/src/broadcasting/: chat.rs  mod.rs  user_registered.rs
app/src/commands/: greet.rs  mod.rs
app/src/config/: database.rs  mail.rs  mod.rs
app/src/controllers/: admin.rs  auth_2fa.rs  auth_reset.rs  auth_verify.rs  avatar_upload.rs  config_example.rs  home.rs  mod.rs  paginated_users.rs  ping.rs  posts.rs  sse_example.rs  todo.rs  user.rs  welcome.rs
app/src/events/: mod.rs
app/src/factories/: mod.rs  post_factory.rs  user_factory.rs
app/src/jobs/: mod.rs  welcome_log.rs
app/src/listeners/: mod.rs
app/src/mail/: welcome.rs
app/src/middleware/: auth.rs  logging.rs
app/src/migrations/: m20251208_220000_create_sessions_table.rs  m20251208_230000_create_remember_tokens_table.rs  m20251208_240000_create_posts_table.rs  m20251209_000000_create_auth_ceremony_tokens_table.rs  m_2026_05_19_phase_10a_user_columns.rs  m_2026_05_19_phase_10b_relations_schema.rs  m_2026_05_20_phase_10b_profiles.rs  m_2026_05_21_phase_10c_audit_log.rs  m_2026_06_08_auth_flow_tokens.rs  m_2026_06_08_auth_flows_user_columns.rs  mod.rs
app/src/models/: comments.rs  mod.rs  posts.rs  profiles.rs  role_user.rs  roles.rs  taggables.rs  tags.rs  todos.rs  users.rs  videos.rs
app/src/notifications/: mod.rs  order_shipped.rs
app/src/payments/: billable.rs  mod.rs
app/src/policies/: mod.rs  post_policy.rs
app/src/props/: mod.rs  user_props.rs
app/src/providers/: auth_provider.rs
app/src/resources/: user_resource.rs
app/src/seeders/: base_seeder.rs  mod.rs
app/src/supervisors/: heartbeat.rs  mod.rs
app/src/ws/: echo.rs  mod.rs
app/tests/: avatar_upload_e2e.rs  billing_e2e_mock.rs  config_route_scrubbed.rs  console_binary_e2e.rs  console_greet.rs  eloquent_dogfood.rs  factory_seeder_dogfood.rs  feature_flag_request_path.rs  lifecycle_dogfood.rs  mail_welcome_dogfood.rs  notification_order_shipped_dogfood.rs  notification_order_shipped_multi_channel.rs  paginated_users_e2e.rs  posts_e2e.rs  queue_dogfood.rs  relations_dogfood.rs  supervisor_dogfood.rs  user_registered_listener.rs
crates/suprnova-payments-paddle/: Cargo.toml  README.md
crates/suprnova-payments-paddle/src/: checkout.rs  customer.rs  event_map.rs  lib.rs  subscription.rs  webhook.rs
crates/suprnova-payments-paddle/tests/: integration.rs
crates/suprnova-payments-stripe/: Cargo.toml  README.md
crates/suprnova-payments-stripe/src/: checkout.rs  customer.rs  event_map.rs  lib.rs  payment.rs  subscription.rs  webhook.rs
crates/suprnova-payments-stripe/tests/: integration.rs
crates/suprnova-web-push/: Cargo.toml  README.md
crates/suprnova-web-push/src/: client.rs  ece.rs  error.rs  lib.rs  payload.rs  vapid.rs
crates/suprnova-web-push/tests/: client_test.rs  ece_test.rs  vapid_test.rs
framework/: Cargo.toml  README.md
framework/migrations/: 20260516_create_notifications_table.sql
framework/src/: MODULE_REVIEW_NOTES.md  app.rs  error.rs  lib.rs  lock.rs  prelude.rs  server.rs  static_files.rs  web_push.rs
framework/src/app/: maintenance.rs  mod.rs  paths.rs
framework/src/auth/: authenticatable.rs  config.rs  contract.rs  database_provider.rs  eloquent_provider.rs  events.rs  generic_user.rs  guard.rs  manager.rs  middleware.rs  mod.rs  must_verify_email.rs  provider.rs  remember.rs  request_state.rs  session_guard.rs  token_guard.rs
framework/src/auth_flows/: brute_force.rs  email_verified_middleware.rs  email_verify.rs  events.rs  mail.rs  mod.rs  password_reset.rs  remember_me.rs  token_store.rs  two_factor_challenge_middleware.rs
framework/src/authorization/: gate.rs  mod.rs  registry.rs  response.rs
framework/src/broadcasting/: broadcastable.rs  channel.rs  handler.rs  hub.rs  mod.rs  protocol.rs  request_socket.rs  testing.rs
framework/src/bus/: command.rs  mod.rs  testing.rs
framework/src/cache/: config.rs  memory.rs  mod.rs  redis.rs  store.rs
framework/src/config/: env.rs  mod.rs  repository.rs  typed.rs
framework/tests/: app_key_enforcement.rs  app_key_production_fail_closed.rs  auth_database_provider.rs  auth_dummy_verify_timing.rs  auth_eloquent_provider.rs  auth_http_middleware.rs  auth_session_guard.rs  authorization.rs  boot_wiring.rs  broadcasting_channel.rs  broadcasting_e2e.rs  broadcasting_event_integration.rs  broadcasting_fanout.rs  broadcasting_hub.rs  broadcasting_middleware.rs  broadcasting_presence.rs  broadcasting_protocol.rs  brute_force.rs  bus.rs  cache_bootstrap_driver.rs  cache_forever_default_ttl.rs  cache_laravel_facade.rs  cache_locks.rs  cache_redis_integration.rs  cache_tags.rs  cache_touch.rs  command_macro.rs  common.rs  config_debug_gating.rs  console.rs  console_db_seed.rs  console_typed.rs  container_boot_idempotent.rs  container_boot_returns_err_on_missing_dep.rs  container_dep_resolution.rs  container_laravel_named_aliases.rs  container_test_scope_async_safe.rs  container_test_spawn_inheritance.rs  content_docs.rs  content_markdown.rs  (+234 more)
suprnova-cli/: Cargo.toml  README.md
suprnova-cli/src/: lib.rs  main.rs  ui.rs
suprnova-cli/tests/: db_sync_cli.rs  generate_routes_keys.rs  generate_types_data.rs  make_command_scaffolds.rs  make_inertia_data.rs  new_cli.rs  new_scaffolds_app_key.rs  new_scaffolds_console.rs  scaffold_snapshot.rs
suprnova-macros/: Cargo.toml  README.md
suprnova-macros/src/: command.rs  console_derive.rs  data.rs  describe.rs  domain_error.rs  factory.rs  handler.rs  inertia.rs  injectable.rs  lib.rs  model.rs  model_attribute.rs  multipart.rs  notification_mail.rs  observer.rs  policy.rs  redirect.rs  request.rs  scopes.rs  service.rs  suprnova_test.rs  test_macro.rs  utils.rs  workflow.rs  workflow_step.rs
suprnova-macros/tests/: data_derive.rs
(+637 files in other folders)
