[workspace]
resolver = "2"
members = [
    "framework",
    "app",
    "suprnova-cli",
    "suprnova-macros",
    "crates/suprnova-web-push",
    "crates/suprnova-payments-stripe",
    "crates/suprnova-payments-paddle",
]

[workspace.package]
version = "0.5.9"
edition = "2024"
license = "MIT"

[profile.dev]
debug = "line-tables-only"
