[package]
name = "app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "app"
path = "cmd/main.rs"

[dependencies]
suprnova = { path = "../framework" }
tokio = { version = "1", features = ["full"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
# Adapts tokio channels into futures::Stream values for the SSE
# dogfood handler (broadcast → BroadcastStream → HttpResponse::sse).
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
