[package]
name = "app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "app"
path = "cmd/main.rs"

[dependencies]
suprnova = { path = "../framework" }
tokio = { version = "1", features = ["full"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
# Adapts tokio channels into futures::Stream values for the SSE
# dogfood handler (broadcast → BroadcastStream → HttpResponse::sse).
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
# End-to-end tests against a one-shot server using the framework's
# public `handle_request` adapter need hyper for the client + transport.
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
serde_json = "1"
# Per-test tempdir for the `public` Storage disk so parallel avatar-upload
# e2e tests do not collide on the same on-disk path.
tempfile = "3"
