[package]
name = "suprnova"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Laravel-inspired web framework for Rust"
repository = "https://github.com/entrepeneur4lyf/suprnova"
homepage = "https://github.com/entrepeneur4lyf/suprnova"
keywords = ["web", "framework", "async", "http", "server"]
categories = ["web-programming::http-server", "asynchronous"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
matchit = "0.8"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
suprnova-macros = { path = "../suprnova-macros", version = "0.1" }
dotenvy = "0.15"
inventory = "0.3"
sea-orm = { version = "1.0", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
validator = { version = "0.18", features = ["derive"] }
serde_urlencoded = "0.7"
pretty_assertions = "1.4"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry", "smallvec", "parking_lot"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }

# OpenTelemetry — optional, gated behind the `otel` feature. Default OFF.
# Pinned to the 0.31.x line because `tracing-opentelemetry 0.32.1` (latest)
# still depends on `opentelemetry 0.31.0`. Mixing 0.31 and 0.32 fails to
# compile (different `Tracer` trait identity).
opentelemetry = { version = "0.31.0", optional = true, default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", optional = true, default-features = false, features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", optional = true, default-features = false, features = ["http-proto", "reqwest-client", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = { version = "0.31.0", optional = true, default-features = false, features = ["log"] }
opentelemetry-http = { version = "0.31.0", optional = true, default-features = false }
opentelemetry-semantic-conventions = { version = "0.31.0", optional = true }
tracing-opentelemetry = { version = "0.32.1", optional = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-appender-tracing",
    "dep:opentelemetry-http",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
]
