[package]
name = "suprnova"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Laravel-inspired web framework for Rust"
repository = "https://github.com/entrepeneur4lyf/suprnova"
homepage = "https://github.com/entrepeneur4lyf/suprnova"
keywords = ["web", "framework", "async", "http", "server"]
categories = ["web-programming::http-server", "asynchronous"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
matchit = "0.9"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
suprnova-macros = { path = "../suprnova-macros", version = "0.1" }
dotenvy = "0.15"
inventory = "0.3"
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
thiserror = "2"
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager"] }
validator = { version = "0.20", features = ["derive"] }
serde_urlencoded = "0.7"
pretty_assertions = "1.4"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.19"
rand = { version = "0.10", features = ["std", "std_rng"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.11"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry", "smallvec", "parking_lot"] }
uuid = { version = "1", features = ["v4", "v5", "fast-rng", "serde"] }
dashmap = "6"
torii = { git = "https://github.com/entrepeneur4lyf/suprnova-torii-rs.git", default-features = false, features = ["seaorm-sqlite", "seaorm-postgres", "seaorm-mysql", "password", "oauth", "passkey", "magic-link", "mailer"] }
webauthn-rs = { version = "0.5", features = ["resident-key-support", "danger-allow-state-serialisation"] }
torii-core = { git = "https://github.com/entrepeneur4lyf/suprnova-torii-rs.git" }
torii-storage-seaorm = { git = "https://github.com/entrepeneur4lyf/suprnova-torii-rs.git" }

# Pinned to versions sea-orm 1.1.x exposes via `with-rust_decimal` / `with-bigdecimal`.
# Used by the `pagination` module to round-trip `sea_orm::Value::Decimal` /
# `Value::BigDecimal` boundaries in cursor payloads.
rust_decimal = "1"
bigdecimal = "0.4"
once_cell = "1"

# OpenTelemetry — optional, gated behind the `otel` feature. Default OFF.
# Pinned to the 0.31.x line because `tracing-opentelemetry 0.32.1` (latest)
# still depends on `opentelemetry 0.31.0`. Mixing 0.31 and 0.32 fails to
# compile (different `Tracer` trait identity).
opentelemetry = { version = "0.31.0", optional = true, default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", optional = true, default-features = false, features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", optional = true, default-features = false, features = ["http-proto", "reqwest-rustls", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = { version = "0.31.0", optional = true, default-features = false, features = ["log"] }
opentelemetry-http = { version = "0.31.0", optional = true, default-features = false }
opentelemetry-semantic-conventions = { version = "0.31.0", optional = true }
tracing-opentelemetry = { version = "0.32.1", optional = true }

# Phase 4 — filesystem, uploads, and validation
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
infer = "0.19"
multer = "3"
opendal = { version = "0.56", default-features = false, features = [
    "services-fs",
    "services-s3",
    "services-azblob",
    "services-gcs",
    "services-memory",
    # Production-grade middleware stack. Each `layers-*` feature pulls a
    # separate `opendal-layer-*` crate, which is why they're feature-gated
    # at all — without these flags the layer types aren't even reachable.
    # `layers-retry` (in 0.56 → `RetryLayer`): exponential-backoff retries
    #   on transient 5xx and throttling.
    # `layers-timeout` (`TimeoutLayer`): per-operation timeout.
    # `layers-logging` (`LoggingLayer`): debug-level structured logs for
    #   every operation.
    # `layers-tracing` (`TracingLayer`): `tracing` spans per operation;
    #   integrates with the framework's existing `tracing-subscriber` setup
    #   and (when the `otel` feature is on) the OTLP exporter.
    # `layers-prometheus-client` (`PrometheusClientLayer`): histograms +
    #   counters for the `prometheus-client` registry. We pick this over
    #   `layers-prometheus` because `prometheus-client` is the actively-
    #   maintained crate; the older `prometheus` crate is in maintenance
    #   mode.
    # OTel-specific layers (`layers-otel-trace` / `layers-otel-metrics`)
    # are intentionally NOT enabled here because they depend on the
    # `opentelemetry` crate and could drag in a version different from
    # the framework's pinned 0.31.x line, fracturing the `Tracer` trait
    # identity. If a consumer needs OpenTelemetry, the framework's `otel`
    # feature already wires the SDK and reqwest exporter; opendal's spans
    # surface through `TracingLayer` because `tracing-opentelemetry`
    # bridges them.
    "layers-retry",
    "layers-timeout",
    "layers-logging",
    "layers-tracing",
    "layers-prometheus-client",
] }
url = "2"
# Spill-to-disk backing for large multipart parts. Used at runtime when a
# single upload exceeds the in-memory spill threshold so the framework never
# materialises an arbitrarily large body in RAM.
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "form"] }
getrandom = "0.4.2"
tokio-util = { version = "0.7.18", features = ["time"] }
sea-streamer = { version = "0.5.0", features = ["redis", "runtime-tokio"] }
sea-streamer-redis = "0.5.2"

[features]
default = ["testing"]
# Exposes Storage::fake() and related test helpers. Enabled by default so the
# integration test suite (and consumers' tests) can use them without opting in.
testing = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-appender-tracing",
    "dep:opentelemetry-http",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
# Smoke test for the `opendal::layers::PrometheusClientLayer` feature.
# Pinned to the same line opendal-layer-prometheus-client 0.56 builds
# against — different majors of `prometheus-client` would fracture the
# `Registry` type identity.
prometheus-client = "0.24"
