[package]
name = "suprnova-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for scaffolding Suprnova web applications"
repository = "https://github.com/entrepeneur4lyf/suprnova"
homepage = "https://github.com/entrepeneur4lyf/suprnova"
keywords = ["cli", "scaffold", "suprnova", "web", "generator"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
    name = "suprnova"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
ctrlc = "3.5"
syn = { version = "2", features = ["full", "parsing", "visit"] }
walkdir = "2"
notify = "6"
notify-debouncer-mini = "0.4"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls"] }
chrono = "0.4"
toml = "0.8"
regex = "1"
