[package]
name = "suprnova-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for scaffolding Suprnova web applications"
repository = "https://github.com/entrepeneur4lyf/suprnova"
homepage = "https://github.com/entrepeneur4lyf/suprnova"
keywords = ["cli", "scaffold", "suprnova", "web", "generator"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
    name = "suprnova"
path = "src/main.rs"

[lib]
name = "suprnova_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
ctrlc = "3.5"
syn = { version = "2", features = ["full", "parsing", "visit"] }
walkdir = "2"
notify = "6"
notify-debouncer-mini = "0.4"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls"] }
chrono = "0.4"
toml = "0.8"
regex = "1"
# `key:generate` mints a 32-byte AES-256 key encoded URL-safe-no-pad
# base64 — same wire format as `suprnova::EncryptionKey::to_base64`.
# We duplicate the six primitives instead of pulling `suprnova` into
# the CLI binary, which would drag every framework transitive dep
# along (`tokio`-full + `reqwest` + SeaORM, etc).
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
# Verify generated keys round-trip through the framework's loader.
suprnova = { path = "../framework", version = "0.1" }
# Integration tests that invoke the binary with a temp working directory.
tempfile = "3"
