[package]
name = "suprnova-payments-paddle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Paddle reference adapter for Suprnova's generic Payments surface"

[dependencies]
suprnova = { path = "../../framework" }
paddle-rust-sdk = { version = "0.18.0", default-features = false, features = ["rustls-webpki-roots"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
inventory = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
