[package]
name = "suprnova-payments-stripe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stripe reference adapter for Suprnova's generic Payments surface"

[dependencies]
suprnova = { path = "../../framework" }
async-stripe = { version = "1.0.0-rc.5", default-features = false, features = ["rustls-tls-webpki-roots", "rustls-ring"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
inventory = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
